--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
       <!-- Enlaces de navegación centrados -->
       <ul class="nav-left">
-        <li><a href="#">Inicio</a></li>
         <li><a href="#about">Sobre mí</a></li>
+        <li><a href="#">Contactar</a></li>
         <li><a href="#skills">Habilidades</a></li>
         <li><a href="#">Proyectos</a></li>
       </ul>
@@ -291,16 +291,6 @@
               <h3>MongoDB</h3>
               <p>Gestión de bases de datos NoSQL con MongoDB.</p>
             </div>
-            <div class="skill fade-in delay-18">
-              <div class="icon">
-                <img
-                  src="https://www.svgrepo.com/show/507948/bitcoin-circle.svg"
-                  alt="Blockchain"
-                />
-              </div>
-              <h3>Blockchain</h3>
-              <p>Desarrollo y comprensión de tecnologías descentralizadas.</p>
-            </div>
             <div class="skill fade-in delay-16">
               <div class="icon">
                 <img
@@ -321,7 +311,7 @@
               <h3>Oracle SQL</h3>
               <p>Desarrollo y administración de bases de datos Oracle SQL.</p>
             </div>
-            <div class="skill fade-in delay-19">
+            <div class="skill fade-in delay-18">
               <div class="icon">
                 <img
                   src="https://www.vectorlogo.zone/logos/trello/trello-tile.svg"
@@ -333,7 +323,7 @@
                 Gestión de proyectos y tareas colaborativa de forma eficiente.
               </p>
             </div>
-            <div class="skill fade-in delay-20">
+            <div class="skill fade-in delay-19">
               <div class="icon">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/6/66/Google_Docs_2020_Logo.svg"
@@ -343,7 +333,7 @@
               <h3>Google Docs</h3>
               <p>Creación y colaboración en documentos de texto.</p>
             </div>
-            <div class="skill fade-in delay-21">
+            <div class="skill fade-in delay-20">
               <div class="icon">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Google_Slides_logo_%282014-2020%29.svg"
@@ -353,7 +343,7 @@
               <h3>Google Slides</h3>
               <p>Creación y presentación de diapositivas interactivas.</p>
             </div>
-            <div class="skill fade-in delay-22">
+            <div class="skill fade-in delay-21">
               <div class="icon">
                 <img
                   src="https://upload.wikimedia.org/wikipedia/commons/3/30/Google_Sheets_logo_%282014-2020%29.svg"
@@ -365,7 +355,7 @@
                 Gestión de datos y fórmulas en hojas de cálculo colaborativas.
               </p>
             </div>
-            <div class="skill fade-in delay-23">
+            <div class="skill fade-in delay-22">
               <div class="icon">
                 <img
                   src="https://www.svgrepo.com/show/223052/forms-document.svg"
@@ -375,7 +365,7 @@
               <h3>Google Forms</h3>
               <p>Creación de formularios y encuestas de forma sencilla.</p>
             </div>
-            <div class="skill fade-in delay-24">
+            <div class="skill fade-in delay-23">
               <div class="icon">
                 <img
                   src="https://www.svgrepo.com/show/343559/google-meet-meeting-communication-team.svg"
@@ -385,7 +375,7 @@
               <h3>Google Meet</h3>
               <p>Plataforma de videoconferencias para reuniones remotas.</p>
             </div>
-            <div class="skill fade-in delay-25">
+            <div class="skill fade-in delay-24">
               <div class="icon">
                 <img
                   src="https://www.svgrepo.com/show/353811/google-drive.svg"
