--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <!-- Enlaces de navegación centrados -->
       <ul class="nav-left">
         <li><a href="#about">Sobre mí</a></li>
-        <li><a href="#">Contactar</a></li>
+        <li><a href="#available">Contactar</a></li>
         <li><a href="#skills">Habilidades</a></li>
-        <li><a href="#">Proyectos</a></li>
+        <li><a href="#">Ir a proyectos</a></li>
       </ul>
 
       <!-- Íconos sociales alineados a la derecha -->
@@ -66,6 +66,19 @@
           <h1>¡Hola!<br />mi nombre es</h1>
           <h2>Miguel Angel Carlos Rojas</h2>
           <p><span class="typing-text"></span></p>
+          <!-- Botón para descargar CV -->
+          <a
+            href="components/pdf/CURRICULUM CARLOS ROJAS, MIGUEL ANGEL.pdf"
+            class="btn download-btn"
+            target="_blank"
+          >
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/4726/4726010.png"
+              alt="PDF Icon"
+              class="pdf-icon"
+            />
+            Descargar CV
+          </a>
         </div>
       </div>
     </header>
@@ -111,13 +124,26 @@
       <section id="available" class="available">
         <div class="container">
           <div class="content">
-            <h2 class="title">Estoy disponible para crear proyectos</h2>
+            <h2 class="title">¡Vamos a crear algo juntos!</h2>
             <p class="description">
-              Actualmente estoy aceptando nuevos proyectos y me encantaría saber
-              de los suyos. ¡Juntos podemos hacer grandes cosas!
+              Estoy en búsqueda de nuevos proyectos emocionantes y estaría
+              encantado de escuchar tus ideas. Ya sea que tengas un concepto
+              claro o solo una idea en mente, podemos trabajar juntos para darle
+              vida. ¡No importa el tamaño del proyecto, lo importante es que
+              trabajemos juntos para lograrlo!
             </p>
             <p class="call-to-action">
-              Tómate un minuto y cuéntame qué tienes en mente. ¡Hablemos!
+              Tómate un momento para contarme lo que tienes en mente, ¡y
+              comencemos a crear algo increíble juntos! Estoy listo para aportar
+              mi experiencia y habilidades para hacer que tu visión se haga
+              realidad.
+            </p>
+            <p class="more-info">
+              Ya sea un sitio web, una aplicación o cualquier otro tipo de
+              proyecto, puedo ayudarte a transformar tus ideas en un producto
+              final. Tengo experiencia trabajando con diversos equipos y
+              tecnologías, lo que me permite adaptarme rápidamente a cualquier
+              tipo de proyecto. ¡Hablemos y hagamos que suceda!
             </p>
           </div>
           <a href="https://wa.me/914793557" class="btn" target="_blank">
