--- a/index.html
+++ b/index.html
@@ -176,9 +176,7 @@
             <p class="more-info">
               Ya sea un sitio web, una aplicación o cualquier otro tipo de
               proyecto, puedo ayudarte a transformar tus ideas en un producto
-              final. Tengo experiencia trabajando con diversos equipos y
-              tecnologías, lo que me permite adaptarme rápidamente a cualquier
-              tipo de proyecto. ¡Hablemos y hagamos que suceda!
+              final. ¡Hablemos y hagamos que suceda!
             </p>
           </div>
           <a href="https://wa.me/914793557" class="btn" target="_blank">
