--- a/index.html
+++ b/index.html
@@ -92,63 +92,42 @@
             Soy un desarrollador apasionado por la tecnología y la creación de
             soluciones innovadoras. Mi enfoque es construir aplicaciones
             robustas y escalables que mejoren la experiencia del usuario y
-            faciliten procesos complejos. Me encanta trabajar en equipo,
-            aprender nuevas herramientas y enfrentar desafíos que me permitan
-            crecer profesionalmente.
+            faciliten procesos complejos.
           </p>
 
           <div class="about-content">
             <div class="about-text">
+              <h3>Experiencia Profesional</h3>
               <p>
-                Con más de 3 años de experiencia en diseño y desarrollo de
-                aplicaciones web, he trabajado en proyectos de diversa índole
-                utilizando tecnologías como <strong>React + Vite</strong>,
-                <strong>Angular</strong>, <strong>Blockchain</strong>,
-                <strong>Tailwind CSS</strong>, <strong>Stack</strong>,
-                <strong>Trello</strong>, <strong>Firebase</strong>,
-                <strong>CSS3</strong>, <strong>HTML5</strong>,
-                <strong>TypeScript</strong>, <strong>Powershell</strong>,
-                <strong>Git</strong>, <strong>GitHub</strong>,
-                <strong>Docker</strong>, entre otras. Además, tengo experiencia
-                trabajando con diversas bases de datos como
-                <strong>MySQL</strong>, <strong>PostgreSQL</strong>,
-                <strong>MongoDB</strong>, y <strong>SQL Server</strong>.
+                Con más de 3 años de experiencia, he trabajado en proyectos con
+                tecnologías como
+                <strong>React + Vite</strong>, <strong>Angular</strong>,
+                <strong>Blockchain</strong>, <strong>Docker</strong>, y muchas
+                más.
               </p>
             </div>
-
             <div class="about-text">
+              <h3>Pasión por el Desarrollo</h3>
               <p>
-                Mi pasión por el desarrollo me lleva a mantenerme actualizado
-                sobre las últimas tendencias tecnológicas. Disfruto enfrentar
-                nuevos retos, como la creación de soluciones basadas en
-                <strong>Blockchain</strong> o el diseño de interfaces atractivas
-                con <strong>Tailwind CSS</strong> y <strong>React</strong>.
-                También me enfoco en el backend utilizando herramientas como
-                <strong>Spring Boot</strong>, que me permite desarrollar
-                aplicaciones rápidas, seguras y escalables.
+                Me apasiona estar al día con las últimas tendencias tecnológicas
+                y crear soluciones innovadoras, como interfaces atractivas con
+                <strong>Tailwind CSS</strong> y <strong>React</strong>.
               </p>
             </div>
-
             <div class="about-text">
+              <h3>Trabajo en Equipo</h3>
               <p>
-                En el día a día, me gusta trabajar en equipo, compartir
-                conocimientos y aprender de las experiencias de otros. Considero
-                que la comunicación efectiva y el trabajo colaborativo son clave
-                para el éxito de cualquier proyecto. Además, soy una persona
-                organizado y comprometido, lo que me permite gestionar múltiples
-                tareas y proyectos sin perder calidad en el trabajo.
+                Creo en el poder del trabajo colaborativo, la comunicación
+                efectiva y el aprendizaje continuo para lograr resultados
+                exitosos.
               </p>
             </div>
-
             <div class="about-text">
+              <h3>Herramientas</h3>
               <p>
-                Algunas de las herramientas que utilizo habitualmente en mi
-                trabajo incluyen <strong>GitHub</strong> para el control de
-                versiones, <strong>Docker</strong> para la contenedorización de
-                aplicaciones, y <strong>Postman</strong> para la prueba de APIs.
-                Me apasiona aprender nuevas tecnologías y siempre estoy buscando
-                formas de optimizar procesos y mejorar la calidad de las
-                aplicaciones.
+                Utilizo herramientas como <strong>GitHub</strong>,
+                <strong>Docker</strong>, y <strong>Postman</strong> para
+                optimizar procesos y garantizar la calidad en los proyectos.
               </p>
             </div>
           </div>
