--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
                 <strong>TypeScript</strong>, <strong>Powershell</strong>,
                 <strong>Git</strong>, <strong>GitHub</strong>,
                 <strong>Docker</strong>, entre otras. Además, tengo experiencia
-                trabajando con diversas bases de datos como
-                <strong>MySQL</strong>, <strong>PostgreSQL</strong>,
-                <strong>MongoDB</strong>, y <strong>SQL Server</strong>.
+                trabajando con bases de datos como <strong>MySQL</strong>,
+                <strong>PostgreSQL</strong>, <strong>MongoDB</strong>, y
+                <strong>SQL Server</strong>.
               </p>
             </div>
 
@@ -136,10 +136,12 @@
               <p>
                 En el día a día, me gusta trabajar en equipo, compartir
                 conocimientos y aprender de las experiencias de otros. Considero
-                que la comunicación efectiva y el trabajo colaborativo son clave
-                para el éxito de cualquier proyecto. Además, soy una persona
-                organizada y comprometido, lo que me permite gestionar múltiples
-                tareas y proyectos sin perder calidad en el trabajo.
+                que la comunicación efectiva, el trabajo colaborativo y la
+                creatividad son clave para el éxito de cualquier proyecto.
+                Además, soy una persona organizada, comprometida, proactiva,
+                flexible, motivada y con gran capacidad de adaptación, lo que me
+                permite gestionar múltiples tareas y proyectos de manera
+                eficiente sin perder calidad en el trabajo.
               </p>
             </div>
 
@@ -149,10 +151,11 @@
                 Algunas de las herramientas que utilizo habitualmente en mi
                 trabajo incluyen <strong>GitHub</strong> para el control de
                 versiones, <strong>Docker</strong> para la contenedorización de
-                aplicaciones, y <strong>Postman</strong>
-                para la prueba de APIs. Me apasiona aprender nuevas tecnologías
-                y siempre estoy buscando formas de optimizar procesos y mejorar
-                la calidad de las aplicaciones.
+                aplicaciones, y <strong>Postman</strong> para la prueba de APIs.
+                Me apasiona aprender nuevas tecnologías, explorar herramientas
+                innovadoras, mejorar procesos y siempre estoy buscando formas de
+                optimizar procesos, mejorar la calidad y rendimiento de las
+                aplicaciones de manera constante y eficiente.
               </p>
             </div>
           </div>
