--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
           <p class="section-subtitle">
             Soy un desarrollador apasionado por la tecnología y la creación de
             soluciones innovadoras. Mi enfoque es construir aplicaciones
-            robustas y escalables que mejoren la experiencia del usuario y
-            faciliten procesos complejos. Me encanta trabajar en equipo,
-            aprender nuevas herramientas y enfrentar desafíos que me permitan
-            crecer profesionalmente.
+            robustas, eficientes y escalables que mejoren la experiencia del
+            usuario y faciliten procesos complejos. Me encanta trabajar en
+            equipo, aprender nuevas herramientas, compartir conocimientos y
+            enfrentar desafíos que me permitan crecer profesionalmente.
           </p>
 
           <div class="about-content">
