--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
         </a>
       </div>
 
-      <!-- Enlaces de navegación centrados -->
-      <ul class="nav-left">
+      <!-- Menú desplegable en pantallas móviles -->
+      <div class="menu-toggle" id="menu-toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+
+      <!-- Enlaces de navegación -->
+      <ul class="nav-left" id="nav-links">
         <li><a href="#about">Sobre mí</a></li>
         <li><a href="#available">Contactar</a></li>
         <li><a href="#skills">Habilidades</a></li>
