--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </a>
       </div>
 
-      <!-- Menú desplegable en pantallas móviles -->
-      <div class="menu-toggle" id="menu-toggle">
+      <!-- Ícono de menú en dispositivos móviles -->
+      <div class="menu-icon" id="menu-icon">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
       </div>
 
       <!-- Enlaces de navegación -->
-      <ul class="nav-left" id="nav-links">
+      <ul class="nav-left" id="nav-left">
         <li><a href="#about">Sobre mí</a></li>
         <li><a href="#available">Contactar</a></li>
         <li><a href="#skills">Habilidades</a></li>
