--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio de Miguel Angel Carlos Rojas</title>
-    <link rel="icon" href="assets/img/icon.png" type="image/png" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="icon" href="assets/icons/icon.png" type="image/png" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -14,7 +14,7 @@
       <!-- Logo -->
       <div class="logo">
         <a href="#">
-          <img src="assets/img/icon.png" alt="Logo" class="logo-image" />
+          <img src="assets/icons/icon.png" alt="Logo" class="logo-image" />
         </a>
       </div>
 
@@ -67,7 +67,7 @@
     <header class="header">
       <div class="header-content">
         <div class="profile-photo">
-          <img src="assets/img/profile.jpg" alt="Foto de perfil" />
+          <img src="assets/images/profile.jpg" alt="Foto de perfil" />
         </div>
         <div class="intro">
           <h1>¡Hola!<br />mi nombre es</h1>
@@ -490,6 +490,6 @@
       </div>
     </footer>
 
-    <script type="module" src="./assets/js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
   </body>
 </html>
