--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </div>
           <a href="https://wa.me/914793557" class="btn" target="_blank">
             <img
-              src="assets/img/whatsapp.webp"
+              src="./assets/icons/whatsapp.webp"
               alt="WhatsApp"
               class="whatsapp-icon"
             />
