--- a/index.html
+++ b/index.html
@@ -462,22 +462,60 @@
         </div>
       </section>
 
-      <!-- Proyectos Destacados -->
       <section id="projects" class="projects">
         <div class="container">
-          <h2>Proyectos Destacados</h2>
+          <h2 class="section-title">Proyectos Destacados</h2>
           <div class="project-grid">
-            <div class="project-card fade-in">
-              <h3>Proyecto 1</h3>
-              <p>Descripción breve del proyecto.</p>
+            <!-- Proyecto NexCoin -->
+            <div class="project-card">
+              <div class="project-preview">
+                <iframe
+                  src="https://nex-coin-gamma.vercel.app"
+                  frameborder="0"
+                  loading="lazy"
+                  title="Vista previa del Proyecto NexCoin"
+                >
+                </iframe>
+              </div>
+              <div class="project-info">
+                <h3>Proyecto NexCoin</h3>
+                <p>
+                  Plataforma para gestionar monedas digitales y transacciones de
+                  forma segura.
+                </p>
+                <a
+                  href="https://nex-coin-gamma.vercel.app"
+                  class="btn-project"
+                  target="_blank"
+                  >Ver Proyecto</a
+                >
+              </div>
             </div>
-            <div class="project-card fade-in delay-1">
-              <h3>Proyecto 2</h3>
-              <p>Descripción breve del proyecto.</p>
-            </div>
-            <div class="project-card fade-in delay-2">
-              <h3>Proyecto 3</h3>
-              <p>Descripción breve del proyecto.</p>
+
+            <!-- Proyecto Divinex -->
+            <div class="project-card">
+              <div class="project-preview">
+                <iframe
+                  src="https://vg-web-divinex.vercel.app/"
+                  frameborder="0"
+                  loading="lazy"
+                  title="Vista previa del Proyecto Divinex"
+                >
+                </iframe>
+              </div>
+              <div class="project-info">
+                <h3>Proyecto Divinex</h3>
+                <p>
+                  Plataforma interactiva para la gestión de datos y servicios
+                  web con enfoque en la experiencia del usuario.
+                </p>
+                <a
+                  href="https://vg-web-divinex.vercel.app/"
+                  class="btn-project"
+                  target="_blank"
+                  >Ver Proyecto</a
+                >
+              </div>
             </div>
           </div>
         </div>
