--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="#about">Sobre mí</a></li>
         <li><a href="#available">Contactar</a></li>
         <li><a href="#skills">Habilidades</a></li>
-        <li><a href="#">Ir a proyectos</a></li>
+        <li><a href="#projects">Ir a proyectos</a></li>
       </ul>
 
       <!-- Íconos sociales alineados a la derecha -->
