--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
         </div>
       </section>
 
+      <!-- Sección de Proyectos -->
       <section id="projects" class="projects">
         <div class="container">
           <h2 class="section-title">Proyectos Destacados</h2>
