--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p>© 2024 Miguel Angel Carlos Rojas. Todos los derechos reservados.</p>
+        <p>© 2024 Miguel Carlos Rojas. Todos los derechos reservados.</p>
       </div>
     </footer>
 
