--- a/index.html
+++ b/index.html
@@ -475,8 +475,7 @@
                   frameborder="0"
                   loading="lazy"
                   title="Vista previa del Proyecto NexCoin"
-                >
-                </iframe>
+                ></iframe>
               </div>
               <div class="project-info">
                 <h3>Proyecto NexCoin</h3>
@@ -501,8 +500,7 @@
                   frameborder="0"
                   loading="lazy"
                   title="Vista previa del Proyecto Divinex"
-                >
-                </iframe>
+                ></iframe>
               </div>
               <div class="project-info">
                 <h3>Proyecto Divinex</h3>
