--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
   <body>
     <!-- Barra de navegación -->
     <nav class="navbar">
-      <!-- Logo -->
-      <div class="logo">
-        <a href="#">
-          <img src="assets/icons/icon.png" alt="Logo" class="logo-image" />
-        </a>
-      </div>
+      <!-- Contenedor para el ícono del menú y el logo -->
+      <div class="left-container">
+        <!-- Ícono de menú en dispositivos móviles -->
+        <div class="menu-icon" id="menu-icon">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
 
-      <!-- Ícono de menú en dispositivos móviles -->
-      <div class="menu-icon" id="menu-icon">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
+        <!-- Logo -->
+        <div class="logo">
+          <a href="#">
+            <img src="assets/icons/icon.png" alt="Logo" class="logo-image" />
+          </a>
+        </div>
       </div>
 
       <!-- Enlaces de navegación -->
