--- a/index.html
+++ b/index.html
@@ -36,35 +36,38 @@
         <li><a href="#projects">Ir a proyectos</a></li>
       </ul>
 
-      <!-- Íconos sociales alineados a la derecha -->
-      <ul class="nav-right">
-        <li>
-          <a
-            href="https://www.linkedin.com/in/miguelacarlos/"
-            target="_blank"
-            aria-label="LinkedIn"
-          >
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/145/145807.png"
-              alt="LinkedIn"
-              class="social-icon"
-            />
-          </a>
-        </li>
-        <li>
-          <a
-            href="https://github.com/MiguelCarlosRojas"
-            target="_blank"
-            aria-label="GitHub"
-          >
-            <img
-              src="https://cdn-icons-png.flaticon.com/512/733/733609.png"
-              alt="GitHub"
-              class="social-icon"
-            />
-          </a>
-        </li>
-      </ul>
+      <!-- Contenedor para los íconos sociales -->
+      <div class="right-container">
+        <!-- Íconos sociales alineados a la derecha -->
+        <ul class="nav-right">
+          <li>
+            <a
+              href="https://www.linkedin.com/in/miguelacarlos/"
+              target="_blank"
+              aria-label="LinkedIn"
+            >
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/145/145807.png"
+                alt="LinkedIn"
+                class="social-icon"
+              />
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/MiguelCarlosRojas"
+              target="_blank"
+              aria-label="GitHub"
+            >
+              <img
+                src="https://cdn-icons-png.flaticon.com/512/733/733609.png"
+                alt="GitHub"
+                class="social-icon"
+              />
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav>
 
     <header class="header">
