--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
             <div class="skill fade-in delay-23">
               <div class="icon">
                 <img
-                  src="https://www.svgrepo.com/show/343560/google-meet-meeting-communication-team.svg"
+                  src="https://cdn.iconscout.com/icon/free/png-256/free-google-meet-10516012-8630401.png"
                   alt="Google Meet"
                 />
               </div>
