--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </p>
     <button id="toggle-language">Cambiar Idioma</button>
 
-    <script src="script.js"></script>
+    <script src="src/environments/script.js"></script>
   </body>
 </html>
