--- a/index.html
+++ b/index.html
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
+    <title>Redirigiendo...</title>
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Traductor</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 20px;
-      }
-      #content {
-        margin-bottom: 20px;
-      }
-      button {
-        padding: 10px 20px;
-        font-size: 16px;
-        cursor: pointer;
-      }
-    </style>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- Redirigir automáticamente -->
+    <meta http-equiv="refresh" content="0;url=../src/index.html" />
   </head>
   <body>
-    <h1 id="title">Bienvenido</h1>
-    <p id="content">
-      Esta es una página de ejemplo para traducir entre español e inglés.
-    </p>
-    <button id="toggle-language">Cambiar Idioma</button>
-
-    <script src="src/environments/script.js"></script>
+    <p>Redirigiendo al contenido principal...</p>
   </body>
 </html>
