--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,15 @@
     <p id="content">
       Esta es una página de ejemplo para traducir entre español e inglés.
     </p>
-    <button id="toggle-language">Cambiar Idioma</button>
-
+    <div id="toggle-language" style="cursor: pointer">
+      <img
+        id="flag-icon"
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/Flag_of_Mexico.svg/24px-Flag_of_Mexico.svg.png"
+        alt="Bandera de México"
+        width="24"
+        height="16"
+      />
+    </div>
     <script src="../src/environments/script.js"></script>
   </body>
 </html>
