--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Redirigir automáticamente -->
-    <meta http-equiv="refresh" content="0;url=../src/index.html" />
+    <meta http-equiv="refresh" content="0;url=../src/app/app.html" />
   </head>
   <body>
     <p>Redirigiendo al contenido principal...</p>
