--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
       }
       .loader-container {
         text-align: center;
+        max-width: 300px;
+        width: 90%;
+        margin: 0 auto;
       }
       .progress-bar {
-        width: 80%;
-        height: 30px;
+        width: 100%;
+        height: 20px;
         background-color: #e0e0e0;
-        border-radius: 15px;
+        border-radius: 10px;
         overflow: hidden;
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         margin: 20px auto;
@@ -34,13 +37,31 @@
         transition: width 0.3s ease-in-out;
       }
       .loading-text {
-        font-size: 18px;
+        font-size: 16px;
         color: #333;
         margin-top: 10px;
       }
       #progress-percentage {
         font-weight: bold;
         color: #6200ea;
+      }
+
+      /* Responsive Design */
+      @media (max-width: 768px) {
+        .progress-bar {
+          height: 15px;
+        }
+        .loading-text {
+          font-size: 14px;
+        }
+      }
+      @media (max-width: 480px) {
+        .progress-bar {
+          height: 10px;
+        }
+        .loading-text {
+          font-size: 12px;
+        }
       }
     </style>
   </head>
